--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "canvas": "^3.1.0",
     "chart.js": "^4.4.7",
+    "cli-progress": "^3.12.0",
     "csv-writer": "^1.6.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
